Opportunity Product Asset Indicator Field/force-app/main/default/objects/OpportunityLineItem/fields/Asset_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Asset_Indicator__c</fullName>
    <description>Displays an image based on Asset Status.
If the Asset is sold: the image will be a red No symbol.
If the Asset is available: the Image will be a green circle with a white check mark in it.
If the Asset is available, but has other interested parties: the image is flames
If the Asset is a trade-in: the image is shaking hands</description>
    <formula>IF( ISPICKVAL(Type__c,&quot;Trade In&quot;),
    IMAGE(&apos;/resource/Indicator_Icons/TradeInIcon.png&apos;,&apos;Trade In&apos;,30,30),
    IF(PricebookEntry.Product2.Name = &quot;Engineer to Order&quot;, 
        IMAGE(&apos;/resource/Indicator_Icons/EngineerToOrder.png&apos;,&apos;Engineer to Order&apos;,27,27),
        IF(ISBLANK( Asset__c ),
        IMAGE(&apos;/resource/Indicator_Icons/NewItem.png&apos;,&apos;New Item&apos;,27,27),
        IF( Asset_Status__c = &quot;Sold&quot;,IMAGE(&apos;/resource/Indicator_Icons/red.png&apos;,&apos;Asset Sold&apos;,30,30),
            IF(Asset__r.Number_of_Interested_Parties__c &gt; 1, 
                IMAGE(&apos;/resource/Indicator_Icons/Flames.png&apos;, &apos;Hot&apos;,30,30),
                IMAGE(&apos;/resource/Indicator_Icons/green.png&apos;,&apos;Asset Available&apos;,30,30)
            )
        )
    )
    )
)</formula>
    <label>Asset Indicator</label>
    <type>Text</type>
</CustomField>