Opportunity Product Asset Indicator Field/force-app/main/default/objects/OpportunityLineItem/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>distinguishes if the OLI is a Trade In or an item for sale</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>